Allow button to show full button text, also fix vertical-alignment of text in cancel button.

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -489,9 +489,10 @@ input.request-selection {
 .print-pa-total-col { width: 5em; }
 
 .req-edit-button{
-    height: 50px;
-    max-width: 200px;
+    height: 75px;
+    max-width: 220px;
     white-space: normal !important;
+    text-align-last: center;
 }
 
 @media (max-width: 480px) {
